[package]
name = "ssec"
version = "0.2.0"
edition = "2024"

# === Windows dependencies only ====
[target.'cfg(target_os = "windows")'.build-dependencies]
winres = "0.1.12"

[dependencies]
rpassword = "7.2.0"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
clap = { version = "4", features = ["derive"] }
windows = { version = "0.61.3", features = [
	"Win32",
	"Win32_UI",
	"Wdk_System_Memory",
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Threading",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Registry",
	"Win32_System_Memory",
	"Win32_Security",
	"Win32_System_LibraryLoader",
	"Win32_System_WindowsProgramming",
	"Win32_System_Kernel",
	"Win32_UI_Shell",
	"Win32_Storage_FileSystem",
] }
